Fix integration tests and MapStruct/Lombok configuration